# ME454_2024

./: README.md
HW4/: cart_pole_cpp_20240000.cpp
ball_throwing/: CMakeLists.txt  package.xml
ball_throwing/launch/: ball_launch.py
ball_throwing/worlds/: ball.sdf  ball_cylinder.sdf
bowling/: CMakeLists.txt
bowling/launch/: launch.py
cartpole/src/: pid_publisher_subscriber_node.cpp
coin_rolling/: package.xml
coin_rolling/launch/: coin_spawn_launch.py
coin_rolling/src/: inclined_coin_pubsub.cpp
cpp_practice1/: list4arr.cpp  list4arr_eval.cpp
cpp_practice1/include/: listops.h
cpp_practice1/src/: listops.cpp
cpp_practice2/: list4ptr_eval.cpp
cpp_practice2/src/: linkedlist.cpp
final_project/: CMakeLists.txt  README.md
final_project/include/: dspJoint.h  dspLink.h  dspLinkConfig.h  dspSolver.h
final_project/src/: dspJoint.cpp  dspLink.cpp  dspLinkConfig.cpp  dspSimMain.cpp  dspSolver_20230001.cpp
four_bar_linkage/: CMakeLists.txt  package.xml
four_bar_linkage/launch/: four_bar_linkage_launch.py
four_bar_linkage_cpp/: CMakeLists.txt
four_bar_linkage_cpp/src/: four_bar_linkage_simulation_20240001.cpp  four_bar_linkage_simulation_solution.cpp
four_bar_linkage_cpp_solution/: CMakeLists.txt
four_bar_linkage_cpp_solution/src/: four_bar_linkage_simulation_solution.cpp
four_bar_linkage_solution/: CMakeLists.txt  package.xml
four_bar_linkage_solution/launch/: four_bar_linkage_launch.py
four_bar_linkage_solution/rsc/sdf/: four_bar_linkage.sdf
hw2_template/mymat/include/: mymat.hpp
hw2_template/mymat/src/: mymat.cpp
lidar_basic/: CMakeLists.txt  package.xml
lidar_basic/launch/: lidar_world.launch.py
lidar_basic/rsc/sdf/: lidar_car_sample.sdf  room.sdf
lidar_basic/src/: lidar_process.cpp
lidar_basic/worlds/: lidar_basic.world
midterm_2024/: CMakeLists.txt  package.xml
midterm_2024/launch/: midterm_launch.py
midterm_2024/rsc/: earth_dae.dae
midterm_2024/rsc/urdf/: earth.sdf  earth.urdf
midterm_2024/src/: recorder_20230001.cpp  sun_torque_generator_20230001.cpp
midterm_2024/worlds/: midterm.world
midterm_2024_cpp/: CMakeLists.txt
midterm_2024_cpp/include/: myQuaternion.hpp
midterm_2024_cpp/src/: earth_precession_20230001.cpp
midterm_2024_lib/: CMakeLists.txt
midterm_2024_lib/include/: myQuaternion.hpp  mymat.hpp
midterm_2024_lib/src/: myQuaternion_20230001.cpp  test.cpp
midterm_2024_msg/: CMakeLists.txt  package.xml
midterm_2024_msg/msg/: Midterm.msg
pendulum_movement/: CMakeLists.txt  package.xml
pendulum_movement/launch/: launch.py
pendulum_movement/rsc/: pendulum.sdf  pendulum_double.sdf
pendulum_movement/worlds/: world.sdf
tricycle/launch/: tricycle_launch.py
tricycle/urdf/: tricycle.urdf
vibration/launch/: car_suspension_launch.py
